deployment/webhook.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flap
  name: flap
  namespace: flap-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flap-operator
  template:
    metadata:
      labels:
        app: flap-operator
    spec:
      containers:
        - image: ghcr.io/amirhnajafiz/flap-operator:latest
          name: flap-operator-container
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: tls
              mountPath: "/etc/flap/tls"
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: flap-webhook-tls
