deployment/webhook.svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flap
  name: flap-operator-service
  namespace: flap-operator
spec:
  type: ClusterIP
  ports:
    - port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: flap-operator
